# llama-jax

./: .gitignore  .tool-versions  Makefile  README.md  conftest.py  environment.sh  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md
notebooks/: 01-text-generation.ipynb  02-text-completions.ipynb  03-chat-completions.ipynb  04-mmlu-smoke.ipynb  04-throughput.ipynb  05-mmlu-batch-size.ipynb  05-ollama-benchmark.ipynb  06-mmlu-benchmark.ipynb  06-optimizing-throughput-jit.ipynb  06-optimizing-throughput-queues.ipynb  mmlu-benchmark-0-shot-128q.ipynb  text-completions.ipynb  text-generation.ipynb
src/llama_jax/: __init__.py  attention.py  chat.py  checkpoint.py  cli.py  embeddings.py  ffn.py  head.py  jupyter.py  kv_cache.py  kvc.py  layer.py  model.py  normalization.py  position_mask.py  render.py  rms_norm.py  rope.py  text.py  tokenizer.py  tools.py
src/llama_jax/benchmarks/: llama_models.py  mmlu.py
tests/fixtures/: jax_fixtures.py  llama.py  mmlu.py  reference_fixtures.py  torch_fixtures.py  transformers_fixtures.py  workspace.py
tests/unit/llama_jax/: test_attention.py  test_chat.py  test_checkpoint.py  test_embeddings.py  test_fnn.py  test_head.py  test_kv_cache.py  test_kvc.py  test_layer.py  test_model.py  test_normalization.py  test_position_mask.py  test_rms_norm.py  test_rope.py  test_text.py  test_text_completions.py  test_tokenizer.py
tests/unit/llama_jax/benchmarks/: test_llama_models.py  test_mmlu.py
