#-------------------------------------------------------------------------------
# Project: llama-kit
#-------------------------------------------------------------------------------

[project]

name = "llama-jax"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "blobfile>=3.0.0",
    "click>=8.1.7",
    "jax-metal>=0.1.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]

llama-jax = "llama_jax.cli:cli"

[project.optional-dependencies]

cli = [
    "torch>=2.5.1",
]

benchmarks = [
    "llama-models>=0.0.63",
]

#-------------------------------------------------------------------------------
# Build System
#-------------------------------------------------------------------------------

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

#-------------------------------------------------------------------------------
# Build Backend
#-------------------------------------------------------------------------------

[tool.hatch.version]

source = "env"
variable = "PY_VERSION"

#-------------------------------------------------------------------------------
# uv
#-------------------------------------------------------------------------------

[tool.uv]

dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.2",
    "matplotlib>=3.9.3",
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "transformers>=4.49.0",
    "accelerate>=1.4.0",
    "scipy>=1.14.1",
    "pypdf[image]>=5.3.0",
    "types-tqdm>=4.67.0.20250301",
    "ollama>=0.4.7",
]
